; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_refspec.c_git_refspec_parse.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_refspec.c_git_refspec_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_refspec_parse(i32** %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32** %0, i32*** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i32**, i32*** %5, align 8
  %10 = icmp ne i32** %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %3
  %12 = load i8*, i8** %6, align 8
  %13 = icmp ne i8* %12, null
  br label %14

14:                                               ; preds = %11, %3
  %15 = phi i1 [ false, %3 ], [ %13, %11 ]
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  %18 = load i32**, i32*** %5, align 8
  store i32* null, i32** %18, align 8
  %19 = call i32* @git__malloc(i32 4)
  store i32* %19, i32** %8, align 8
  %20 = load i32*, i32** %8, align 8
  %21 = call i32 @GIT_ERROR_CHECK_ALLOC(i32* %20)
  %22 = load i32*, i32** %8, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = load i32, i32* %7, align 4
  %25 = icmp ne i32 %24, 0
  %26 = xor i1 %25, true
  %27 = xor i1 %26, true
  %28 = zext i1 %27 to i32
  %29 = call i64 @git_refspec__parse(i32* %22, i8* %23, i32 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %34

31:                                               ; preds = %14
  %32 = load i32*, i32** %8, align 8
  %33 = call i32 @git__free(i32* %32)
  store i32 -1, i32* %4, align 4
  br label %37

34:                                               ; preds = %14
  %35 = load i32*, i32** %8, align 8
  %36 = load i32**, i32*** %5, align 8
  store i32* %35, i32** %36, align 8
  store i32 0, i32* %4, align 4
  br label %37

37:                                               ; preds = %34, %31
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32* @git__malloc(i32) #1

declare dso_local i32 @GIT_ERROR_CHECK_ALLOC(i32*) #1

declare dso_local i64 @git_refspec__parse(i32*, i8*, i32) #1

declare dso_local i32 @git__free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
